Fixed dark mode and made upsellItem sticky

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
 #root {
-  max-width: 1280px;
   margin: auto;
   padding: 0rem;
   text-align: center;
-}
-.app {
-  max-width: 600px;
-  margin: 0 auto;
 }
 body {
   --outside-color: #e61919;
@@ -23,4 +18,14 @@ main {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 0.4em;
   padding: 1em;
+}
+.rightCollumn {
+  display: inline-block;
+  flex-direction: column;
+  position:sticky;
+  top: 0;
+  padding-left: 2rem;
+  border-radius: 15px;
+  width: 18em;
+  height: 20em;
 }
