--- a/src/components/basket/basket.css
+++ b/src/components/basket/basket.css
@@ -1,6 +1,6 @@
 .continueShoppingButton {
   background-color: rgb(212, 226, 243);
-  
+
   margin-right: 10px;
 }
 
@@ -11,6 +11,11 @@
   width: 100%;
   height: auto;
   justify-content: space-between;
+
+}
+.shoppingCart p {
+  color: black;
+
 }
 .upsellItems {
   background-color: rgb(248, 248, 248);
@@ -48,16 +53,10 @@
   padding: 2em;
 }
 
-.rightCollumn {
-  display: inline-block;
-  flex-direction: column;
-  padding: 2em;
-  border-radius: 15px;
-  width: 18em;
-  height: 20em;
-}
+
 .shoppingCart td,
 .shoppingCart th {
   padding: 10px; /* Adjust as needed */
   border-bottom: 1px solid black;
+  color:black;
 }
